added a more copy pastable alternative

--- a/css reset.css
+++ b/css reset.css
@@ -21,6 +21,9 @@
 body {
   /* 4. Add accessible line-height */
   line-height: 1.5;
+
+  /*works too -> line-height: calc(1em + 0.5rem); */
+
   /* 5. Improve text rendering */
   -webkit-font-smoothing: antialiased;
 }
@@ -52,6 +55,57 @@ h1, h2, h3, h4, h5, h6 {
 /*
   10. Create a root stacking context
 */
+#root, #__next {
+  isolation: isolate;
+}
+
+
+/* COPY PASTE FROM BELOW IF NEEDED */
+
+/*
+  Josh's Custom CSS Reset
+  https://www.joshwcomeau.com/css/custom-css-reset/
+*/
+
+*, *::before, *::after {
+  box-sizing: border-box;
+}
+
+* {
+  margin: 0;
+}
+
+@media (prefers-reduced-motion: no-preference) {
+  html {
+    interpolate-size: allow-keywords;
+  }
+}
+
+body {
+  line-height: 1.5;
+  -webkit-font-smoothing: antialiased;
+}
+
+img, picture, video, canvas, svg {
+  display: block;
+  max-width: 100%;
+}
+
+input, button, textarea, select {
+  font: inherit;
+}
+
+p, h1, h2, h3, h4, h5, h6 {
+  overflow-wrap: break-word;
+}
+
+p {
+  text-wrap: pretty;
+}
+h1, h2, h3, h4, h5, h6 {
+  text-wrap: balance;
+}
+
 #root, #__next {
   isolation: isolate;
 }
