--- a/Project 1. Sign-up Form/style.css
+++ b/Project 1. Sign-up Form/style.css
@@ -7,25 +7,29 @@ body {
 }
 
 main {
-    display: grid;
-    grid-template-columns: auto 60%;
+    display: flex;
+    flex-direction: row-reverse;
 }
 
-/* .form-block{
-    grid-column: 2;
+.form-block { 
+    width: 60rem;
+    background-color: #c4e0cd;
 }
 
-aside {
-    grid-column: 1;
+/* stops image from dislocating the form */
+aside { 
+    width: 40rem;
+    position: relative;
+    overflow: hidden;
 }
 
-aside >* {
-    max-width: 100px;
-} */
+aside > img.village {
+    width: 600px;
+}
 
-.form-block { grid-column: 2; grid-row: 1; }
-aside { grid-column: 1; grid-row: 1; }
-
-aside >* {
-    max-width: 100px;
+aside > img.odin-logo {
+    width: 20vw;
+    position: absolute;
+    top: 25vw;
+    left: 10vw;
 }
