--- a/Project 1. Sign-up Form/style.css
+++ b/Project 1. Sign-up Form/style.css
@@ -1,5 +1,13 @@
 :root {
     --background-color: #f5f5f5;
+    --theme-color: #596D48;
+    font-family: Tahoma, sans-serif;
+}
+
+* {
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
 }
 
 body {
@@ -12,24 +20,47 @@ main {
 }
 
 .form-block { 
-    width: 60rem;
-    background-color: #c4e0cd;
+    width: 60%;
+    background-color: var(--background-color);
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    align-items: center;
+    gap: 10vw;
+    padding-top: 10%;
+    padding-left: 2%;
+    padding-right: 2%;
+}
+
+.form-block >* {
+    
 }
 
 /* stops image from dislocating the form */
 aside { 
-    width: 40rem;
+    width: 40%;
     position: relative;
     overflow: hidden;
 }
 
 aside > img.village {
-    width: 600px;
+    width: 300%;
 }
 
 aside > img.odin-logo {
     width: 20vw;
     position: absolute;
-    top: 25vw;
+    top: 15vw;
     left: 10vw;
+}
+
+form {
+    background-color: white;
+    box-shadow: 0px 7px 5px rgba(128, 128, 128, 0.39);
+}
+
+section > p > a {
+    color: var(--theme-color);
+    font-weight: bolder;
+    text-decoration: none;
 }
