--- a/Project 1. Sign-up Form/style.css
+++ b/Project 1. Sign-up Form/style.css
@@ -30,6 +30,18 @@ main {
     padding-top: 10%;
 }
 
+/* give margin to all children so i can ovveride easier */
+.form-block >* {
+    margin-left: 3vw;
+}
+
+/* add opposite margin to make it extend further */
+#whitebox {
+    background-color: white;
+    box-shadow: 0px 7px 5px rgba(128, 128, 128, 0.39);
+    margin-left: calc(3vw*-1);
+}
+
 /* stops image from dislocating the form */
 aside { 
     width: 40%;
@@ -46,11 +58,6 @@ aside > img.odin-logo {
     position: absolute;
     top: 15vw;
     left: 10vw;
-}
-
-form {
-    background-color: white;
-    box-shadow: 0px 7px 5px rgba(128, 128, 128, 0.39);
 }
 
 section > p > a {
@@ -87,3 +94,14 @@ input:invalid {
     border-color: red;
 }
 
+button {
+    padding-top: 8px;
+    padding-bottom: 8px;
+    padding-left: 60px;
+    padding-right: 60px;
+    margin-top: 3vw;
+    background-color: var(--theme-color);
+    color: white;
+    border: none;
+    border-radius: 6px;
+}
