added regex filtering on nr so it gets red when wrong before submit + adjusted legend

--- a/Project 1. Sign-up Form/style.css
+++ b/Project 1. Sign-up Form/style.css
@@ -42,6 +42,12 @@ main {
     margin-left: calc(3vw*-1);
 }
 
+#whitebox > legend {
+    margin-left: 20px;
+    font-weight: 900;
+    font-size: x-large;
+}
+
 /* stops image from dislocating the form */
 aside { 
     width: 40%;
