--- a/Project 1. Sign-up Form/style.css
+++ b/Project 1. Sign-up Form/style.css
@@ -26,7 +26,7 @@ main {
     flex-direction: column;
     justify-content: flex-start;
     align-items: center;
-    gap: 10vw;
+    gap: 3vw;
     padding-top: 10%;
 }
 
@@ -56,14 +56,14 @@ aside {
 }
 
 aside > img.village {
-    width: 300%;
+    width: 200%;
 }
 
 aside > img.odin-logo {
-    width: 20vw;
+    width: 12vw;
     position: absolute;
     top: 15vw;
-    left: 10vw;
+    left: 13vw;
 }
 
 section > p > a {
@@ -90,6 +90,7 @@ section > p > a {
     padding: 10px;
 }
 
+
 input {
     border: solid 1px rgba(128, 128, 128, 0.219);
     border-radius: 5px;
@@ -101,13 +102,24 @@ input:invalid {
 }
 
 button {
-    padding-top: 8px;
-    padding-bottom: 8px;
-    padding-left: 60px;
-    padding-right: 60px;
+    padding-top: 12px;
+    padding-bottom: 12px;
+    padding-left: 50px;
+    padding-right: 50px;
     margin-top: 3vw;
     background-color: var(--theme-color);
     color: white;
     border: none;
     border-radius: 6px;
+    align-self: flex-start;
+    font-weight: 800;
+}
+
+/* make the button appear more clickable */
+button:hover {
+    border: inset 3px rgba(100, 100, 100, 0.315)
+}
+
+.form-block > p {
+    align-self: flex-start;
 }
