added margin on h1 and h2

--- a/Project 1. Sign-up Form/style.css
+++ b/Project 1. Sign-up Form/style.css
@@ -72,6 +72,10 @@ section > p > a {
     text-decoration: none;
 }
 
+h1, h2 {
+    margin-bottom: 20px;
+}
+
 .inputs {
     padding: 10px;
     display: flex;
